--- a/flex-position/css/style.css
+++ b/flex-position/css/style.css
@@ -16,7 +16,7 @@
   font-family: "Lato", sans-serif;
 }
 .container {
-  width: 75%;
+  width: 85%;
   margin: auto;
   padding: 16px;
 }
@@ -32,10 +32,10 @@
 
 .header {
   height: 50vh; /*viewport height*/
-  border-bottom-left-radius: 56px;
-  border-bottom-right-radius: 56px;
+  border-bottom-left-radius: 100px;
+  border-bottom-right-radius: 100px;
 }
-.header-info > * {
+.header-info > * { /* Direct Child */
   margin-top: 16px;
   margin-bottom: 16px;
 }
@@ -105,7 +105,7 @@
 .navbar-right li a {
   text-decoration: none;
   color: #ffffff;
-  padding: 16px;
+  padding: 8px 16px;
   line-height: 50px;
   /* font-variant: small-caps; */
   font-size: 18px;
@@ -113,7 +113,8 @@
 .navbar-right li a:hover {
   background-color: #ffffff;
   color: var(--primary-blue);
-  border-radius: 8px;
+  border-radius: 5px;
+  font-weight: bold;
 }
 
 /* features */
@@ -226,8 +227,8 @@
 
 .items {
   width: 100%;
-  height: 75vh;
-  background-color: #f5f5f5;
+  height: 85vh;
+  background-color: #f0f0f0;
   padding-top: 16px;
   padding-bottom: 16px;
 }
@@ -235,14 +236,14 @@
   height: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 .wrapper {
   width: 25%;
   height: 75%;
   border: 1px solid #ccc;
-  border-radius: 16px;
+  border-radius: 5px;
   background-color: #ffffff;
   padding: 16px;
   /* box-shadow: 0.5px 0.5px 2.5px 1.5px #ccc; */
@@ -251,7 +252,7 @@
     margin-bottom: 5px;
 }
 .wrapper:hover {
-  box-shadow: 0.75px 0.75px 3.5px 2.5px #ccc;
+  box-shadow: 1px 1px 5px 3.5px #ccc;
   border: none;
 }
 .wrapper img {
